feat: Implement built-in `regex`, `fs`, and `http` modules
This commit introduces three new built-in modules: `regex`, `fs` (filesystem), and `http`.

---

 Key Changes:

1.  **ModuleLoader Update:**
    * The `Evaluator::import_module` function now short-circuits the import process for the module specifications **"regex"**, **"fs"**, **"http"**, and their fully qualified forms (**"swazi:regex"**, **"swazi:fs"**, **"swazi:http"**).
    * For these built-in modules, a `ModuleRecord` is created, marked as `Loading`, added to the cache, and its exports object is populated using dedicated factory functions (`make_regex_exports`, `make_fs_exports`, `make_http_exports`).
    * This ensures that built-ins are handled before filesystem path resolution.

2.  **`CMakeLists.txt` Update (HTTP Support):**
    * Added logic to find the **`CURL`** package.
    * If `libcurl` is found, the **`swazi`** target is compiled with the definition **`HAVE_LIBCURL=1`** and linked against the `CURL::libcurl` library, enabling the real HTTP implementation.
    * If `libcurl` is not found, a warning is emitted, and the HTTP builtin will fall back to a stub that throws at runtime.

This change lays the groundwork for powerful native functionality directly accessible via `import("regex")`, `import("fs")`, and `import("http")`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,20 @@ add_executable(swazi ${SOURCES})
 # Include headers for this target
 target_include_directories(swazi PRIVATE include)
 
+find_package(CURL QUIET)
+
+if (CURL_FOUND)
+    message(STATUS "libcurl found: enabling builtin http.get and linking libcurl")
+    # Ensure the compile unit sees HAVE_LIBCURL so the builtins unit compiles the real implementation.
+    target_compile_definitions(swazi PRIVATE HAVE_LIBCURL=1)
+    # Link the libcurl library to the swazi target
+    target_link_libraries(swazi PRIVATE CURL::libcurl)
+else()
+    message(WARNING "libcurl not found: http builtin will use a stub that throws at runtime. To enable HTTP, install libcurl development package and re-run CMake.")
+endif()
+
+
+
+
 # Optional: link external libraries
 # target_link_libraries(swazi PRIVATE <lib>)
