featute: Added the -v / --version flag to print the version of th current interpreter - exposed tge version in cmakefile to the sourc code with SWAZI_VERSION macro so we can use it in the main to print the version - used the macro to the repl and the main() so version printed well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,12 @@ add_executable(swazi ${SOURCES})
 # Include headers for this target
 target_include_directories(swazi PRIVATE include)
 
+# make the project version available as SWAZI_VERSION (a C string) to the compiler
+# use the PROJECT_VERSION variable set by `project(... VERSION ...)`
+target_compile_definitions(swazi PRIVATE SWAZI_VERSION=\"${PROJECT_VERSION}\")
+
+
+
 find_package(CURL QUIET)
 
 if (CURL_FOUND)
