feat(build,loader): embed built-in .sl/.swz libraries into binary
- Added CMake logic to generate builtin_sl.cpp from lib/ sources using embed_builtins.py
- Updated ModuleLoader to detect and load embedded modules before filesystem ones
- Improved module caching, export handling, and environment setup for embedded libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,40 @@ endif()
 # target_link_libraries(swazi PRIVATE <lib>)
 
 target_link_libraries(swazi PRIVATE linenoise)
+
+# --- BEGIN embed builtins: regenerate when any lib/*.sl or lib/*.swz changes ---
+find_package(Python COMPONENTS Interpreter REQUIRED)
+
+set(BUILTIN_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
+set(GENERATED_DIR "${CMAKE_BINARY_DIR}/generated")
+set(GENERATED_BUILTIN_CPP "${GENERATED_DIR}/builtin_sl.cpp")
+
+file(MAKE_DIRECTORY "${GENERATED_DIR}")
+
+# Glob lib files and make the configure step re-run if files are added/removed.
+# CMake's CONFIGURE_DEPENDS makes CMake re-evaluate the glob if the directory contents change.
+file(GLOB_RECURSE EMBED_LIB_FILES
+     CONFIGURE_DEPENDS
+     "${BUILTIN_LIB_DIR}/*.sl"
+     "${BUILTIN_LIB_DIR}/*.swz"
+)
+
+add_custom_command(
+  OUTPUT "${GENERATED_BUILTIN_CPP}"
+  COMMAND ${Python_EXECUTABLE} "${CMAKE_SOURCE_DIR}/scripts/embed_builtins.py" "${BUILTIN_LIB_DIR}" "${GENERATED_BUILTIN_CPP}"
+  DEPENDS "${CMAKE_SOURCE_DIR}/scripts/embed_builtins.py" ${EMBED_LIB_FILES}
+  WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  COMMENT "Embedding .sl/.swz files from ${BUILTIN_LIB_DIR} into ${GENERATED_BUILTIN_CPP}"
+  VERBATIM
+)
+
+# Target that ensures generated file exists. Not necessary to be ALL but it's safe.
+add_custom_target(generate_builtins DEPENDS "${GENERATED_BUILTIN_CPP}")
+
+# Ensure the generated directory is visible for includes if generator emits headers there
+target_include_directories(swazi PRIVATE "${GENERATED_DIR}" "${CMAKE_SOURCE_DIR}/src/evaluator")
+
+# Add the generated cpp into the swazi target sources and ensure generation happens before building
+target_sources(swazi PRIVATE "${GENERATED_BUILTIN_CPP}")
+add_dependencies(swazi generate_builtins)
+# --- END embed builtins ---
