Add libuv-backed http.createServer implementation and integrate async bridge
Implemented a full native HTTP server powered by libuv and connected it
to the runtimeâ€™s AsyncBridge. This enables http.createServer() to
function as a first-class async API inside the VM.

Key changes: - Enable HAVE_LIBUV in CMake so builtins compile the
libuv-backed server instead of the stub. - Add new async directory
structure and move AsyncApi.cpp into Async/. - Introduce HttpAPI.cpp
with a complete minimal HTTP parser, request/response objects, and
server lifecycle using uv loops. - Expand AsyncBridge.hpp with scheduler
helpers for cross-thread callback dispatch. - Add native_createServer
declaration to builtins.hpp and wire it into make_http_exports when
libuv is present. - Remove old NotImplemented stubs for createServer
when libuv is enabled. - Track and manage live server instances with
safe shutdown.

This brings SwaziLangâ€™s HTTP API much closer to Node-style ergonomics
and ensures async callbacks flow safely through the scheduler loop.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,10 @@ add_subdirectory(thirdparty/libuv-1.51.0)
 # Link the libuv target to your executable.
 # The target name provided by libuv's own CMake is 'uv'.
 target_link_libraries(swazi PRIVATE uv)
+
+# IMPORTANT: tell the compiler that libuv is present so builtins.cpp compiles the libuv-backed createServer.
+# Without this the http module builds the runtime stub that throws NotImplementedError.
+target_compile_definitions(swazi PRIVATE HAVE_LIBUV=1)
 # --- End local libuv integration ---
 
 
