-- added buffer.toHex() and buffer.fromHex(..) -- implemented buffer.from(hexStr, hex) -- removed cmakeList duplicate building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,55 +5,23 @@ project(SwaziLang VERSION 2.22.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Source files
-file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.cc" "src/*.c")
-
+# Linenoise library
 add_library(linenoise thirdparty/linenoise/linenoise.c)
 target_include_directories(linenoise PUBLIC thirdparty/linenoise/)
 
-file(
-  GLOB_RECURSE
-  NETSOURCE
+# Network module library
+file(GLOB_RECURSE NETSOURCE
   "src/evaluator/modules_builtins/net_module/*.cc"
   "src/evaluator/modules_builtins/net_module/*.cpp"
   "src/evaluator/modules_builtins/net_module/*.c"
-  )
+)
 add_library(swazi_net ${NETSOURCE})
 target_include_directories(swazi_net
-    PUBLIC
-        ${CMAKE_SOURCE_DIR}/include
-    PRIVATE 
-        ${CMAKE_SOURCE_DIR}/src/evaluator/modules_builtins/net_module
+    PUBLIC ${CMAKE_SOURCE_DIR}/include
+    PRIVATE ${CMAKE_SOURCE_DIR}/src/evaluator/modules_builtins/net_module
 )
-# Create executable target
-add_executable(swazi ${SOURCES})
-# Include headers for this target
-target_include_directories(swazi PRIVATE include thirdparty/libuv-1.51.0/include)
 
-# make the project version available as SWAZI_VERSION (a C string) to the compiler
-# use the PROJECT_VERSION variable set by `project(... VERSION ...)`
-target_compile_definitions(swazi PRIVATE SWAZI_VERSION=\"${PROJECT_VERSION}\")
-
-find_package(CURL QUIET)
-
-if (CURL_FOUND)
-    message(STATUS "libcurl found: enabling builtin http.get and linking libcurl")
-    target_compile_definitions(swazi PRIVATE HAVE_LIBCURL=1)
-    target_link_libraries(swazi PRIVATE CURL::libcurl)
-else()
-    message(WARNING "libcurl not found: http builtin will use a stub that throws at runtime. To enable HTTP, install libcurl development package and re-run CMake.")
-endif()
-
-target_link_libraries(swazi PRIVATE linenoise)
-target_link_libraries(swazi PRIVATE swazi_net)
-
-# --- Build and include local libuv from the thirdparty directory ---
-add_subdirectory(thirdparty/libuv-1.51.0)
-target_link_libraries(swazi PRIVATE uv)
-target_compile_definitions(swazi PRIVATE HAVE_LIBUV=1)
-# --- End local libuv integration ---
-
-# --- BEGIN embed builtins: regenerate when any lib/*.sl or lib/*.swz changes ---
+# --- BEGIN embed builtins ---
 find_package(Python COMPONENTS Interpreter REQUIRED)
 
 set(BUILTIN_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
@@ -78,31 +46,14 @@ add_custom_command(
 )
 
 add_custom_target(generate_builtins DEPENDS "${GENERATED_BUILTIN_CPP}")
-
-target_include_directories(swazi PRIVATE "${GENERATED_DIR}" "${CMAKE_SOURCE_DIR}/src/evaluator")
-target_sources(swazi PRIVATE "${GENERATED_BUILTIN_CPP}")
-add_dependencies(swazi generate_builtins)
 # --- END embed builtins ---
 
-# --- INSTALLATION RULES ---
-install(TARGETS swazi DESTINATION bin)
-
-# ===== Google Test Setup =====
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/releases/download/v1.17.0/googletest-1.17.0.tar.gz
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# ===== libsodium Setup =====
+# --- libsodium Setup ---
 include(ExternalProject)
 
 set(LIBSODIUM_PREFIX "${CMAKE_BINARY_DIR}/libsodium")
 set(LIBSODIUM_INSTALL_DIR "${LIBSODIUM_PREFIX}/install")
 
-# Create the directories that will exist after build (prevents CMake error)
 file(MAKE_DIRECTORY "${LIBSODIUM_INSTALL_DIR}/include")
 file(MAKE_DIRECTORY "${LIBSODIUM_INSTALL_DIR}/lib")
 
@@ -117,51 +68,72 @@ ExternalProject_Add(
     BUILD_IN_SOURCE 0
 )
 
-# Create imported target for libsodium
 add_library(sodium STATIC IMPORTED GLOBAL)
 set_property(TARGET sodium PROPERTY IMPORTED_LOCATION "${LIBSODIUM_INSTALL_DIR}/lib/libsodium.a")
 set_property(TARGET sodium PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${LIBSODIUM_INSTALL_DIR}/include")
 add_dependencies(sodium libsodium_build)
 
-enable_testing()
+# --- libuv Setup ---
+add_subdirectory(thirdparty/libuv-1.51.0)
 
-# Collect all test files
-file(GLOB_RECURSE TEST_SOURCES "tests/*.cc")
-
-# Create a library from sources (excluding main if you have one)
+# --- CORE LIBRARY (compile everything once here) ---
 file(GLOB_RECURSE LIB_SOURCES "src/*.cpp" "src/*.cc" "src/*.c")
 list(FILTER LIB_SOURCES EXCLUDE REGEX ".*main\\.cpp$")
 
-add_library(swazi_lib ${LIB_SOURCES})
+add_library(swazi_lib ${LIB_SOURCES} "${GENERATED_BUILTIN_CPP}")
+
 target_include_directories(swazi_lib PUBLIC 
-    include 
-    thirdparty/libuv-1.51.0/include 
-    "${GENERATED_DIR}" 
-    "${CMAKE_SOURCE_DIR}/src/evaluator"
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/thirdparty/libuv-1.51.0/include
+    ${GENERATED_DIR}
+    ${CMAKE_SOURCE_DIR}/src/evaluator
 )
+
 target_compile_definitions(swazi_lib PUBLIC 
-    SWAZI_VERSION=\"${PROJECT_VERSION}\" 
+    SWAZI_VERSION=\"${PROJECT_VERSION}\"
     HAVE_LIBUV=1
     HAVE_LIBSODIUM=1
 )
-target_link_libraries(swazi_lib PUBLIC linenoise uv sodium)
 
-if (CURL_FOUND)
-    target_compile_definitions(swazi_lib PUBLIC HAVE_LIBCURL=1)
-    target_link_libraries(swazi_lib PUBLIC CURL::libcurl)
-endif()
+target_link_libraries(swazi_lib PUBLIC 
+    linenoise
+    swazi_net
+    uv
+    sodium
+)
 
-target_sources(swazi_lib PRIVATE "${GENERATED_BUILTIN_CPP}")
 add_dependencies(swazi_lib generate_builtins)
 
-# Link libsodium and set compile definitions for swazi executable
-target_compile_definitions(swazi PRIVATE HAVE_LIBSODIUM=1)
-target_link_libraries(swazi PRIVATE sodium)
+# Optional libcurl
+find_package(CURL QUIET)
+if (CURL_FOUND)
+    message(STATUS "libcurl found: enabling builtin http.get")
+    target_compile_definitions(swazi_lib PUBLIC HAVE_LIBCURL=1)
+    target_link_libraries(swazi_lib PUBLIC CURL::libcurl)
+else()
+    message(WARNING "libcurl not found: http builtin will use a stub")
+endif()
 
-# Update swazi executable to use the library
+# --- MAIN EXECUTABLE (just main.cpp, links to library) ---
+add_executable(swazi src/main.cpp)
 target_link_libraries(swazi PRIVATE swazi_lib)
 
-# Create test executable
+# --- INSTALLATION ---
+install(TARGETS swazi DESTINATION bin)
+
+# --- TESTING ---
+enable_testing()
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/releases/download/v1.17.0/googletest-1.17.0.tar.gz
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+file(GLOB_RECURSE TEST_SOURCES "tests/*.cc")
+
 add_executable(swazi_tests ${TEST_SOURCES})
 target_link_libraries(swazi_tests PRIVATE swazi_lib GTest::gtest_main)
 
