Commit Message: Implement Built-in Events Module and Enhance Source Management Summary: This update introduces a new built-in events module for event-driven programming, refactors SourceManager to use shared pointers for better memory safety during module loading, and fixes minor build and trace issues. Key Changes: 1. New Built-in events Module  * Added events.cc: Implements a thread-safe EventEmitter with the following functionality:    * create(): Factory function to generate new EventEmitter objects.    * on(event, listener) / off(event, listener): Add or remove event listeners.    * once(event, listener): Adds a one-time listener that removes itself after the first execution.    * emit(event, ...args): Triggers listeners asynchronously using the global scheduler.    * removeAllListeners([event]), listenerCount(event), and listeners(event): Utility methods for managing event subscriptions.  * Module Integration: Registered make_events_exports in builtins.hpp and updated ModuleLoader.cpp to handle the events (or swazi:events) short-circuit during import. 2. Source Management & Module Loader Refactor  * Shared Source Ownership: Updated ModuleRecord and the evaluator to store SourceManager as a std::shared_ptr. This ensures source context remains valid for tokens even after the initial loading scope ends.  * Improved Error Traces: Modified TokenLocation::get_line_trace() to provide a fallback filename/line/column string if the SourceManager is unavailable or belongs to a different file.  * SourceManager Safety: Added bounds checking to get_line() to prevent crashes on invalid line numbers or empty files. 3. Build & Infrastructure  * CMake Optimization: Adjusted llhttp build logic to force shared library compilation locally without affecting global BUILD_SHARED_LIBS settings for other dependencies.  * Code Cleanup: Refactored ModuleRecord struct for better readability and consistent member initialization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,6 @@ add_custom_command(
 add_custom_target(generate_builtins DEPENDS "${GENERATED_BUILTIN_CPP}")
 # --- END embed builtins ---
 
-# Build llhttp as a shared library
-set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
-set(BUILD_STATIC_LIBS OFF CACHE BOOL "" FORCE)
 
 # Fetch link re2
 include(FetchContent)
@@ -103,8 +100,12 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(nlohmann_json)
 
-# build llhttp
+# Build llhttp as a shared library
+set(BUILD_SHARED_LIBS ON)
+set(BUILD_STATIC_LIBS OFF)
 add_subdirectory(thirdparty/llhttp)
+# Reset back if needed
+set(BUILD_SHARED_LIBS OFF)
 
 # --- CORE LIBRARY (compile everything once here) ---
 file(GLOB_RECURSE LIB_SOURCES "src/*.cpp" "src/*.cc" "src/*.c")
