Refactor addon API to use HandleScope and EscapableHandleScope
- Convert all internal libraries (linenoise, swazi_net, swazi_lib) to STATIC linkage.
- Introduce swazi_handle_scope and swazi_escapable_handle_scope for automatic memory management of swazi_value handles.
- Wrap swazi_value creation in HandleScope to prevent leaks and dangling pointers.
- Update swazi_abi.h and AddonBridge.cc to support RAII-style scope management for handles.
- Ensure proper cleanup of handles in promises, callbacks, microtasks, and addon registration.
- Modify tests/test_lexer.cc to tokenize arithmetic operators with identifiers for clarity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Linenoise library
-add_library(linenoise thirdparty/linenoise/linenoise.c)
+add_library(linenoise STATIC thirdparty/linenoise/linenoise.c)
 target_include_directories(linenoise PUBLIC thirdparty/linenoise/)
 
 # Network module library
@@ -15,7 +15,7 @@ file(GLOB_RECURSE NETSOURCE
   "src/evaluator/modules_builtins/net_module/*.cpp"
   "src/evaluator/modules_builtins/net_module/*.c"
 )
-add_library(swazi_net ${NETSOURCE})
+add_library(swazi_net STATIC ${NETSOURCE})
 target_include_directories(swazi_net
     PUBLIC ${CMAKE_SOURCE_DIR}/include
     PRIVATE ${CMAKE_SOURCE_DIR}/src/evaluator/modules_builtins/net_module
@@ -114,7 +114,7 @@ list(FILTER LIB_SOURCES EXCLUDE REGEX ".*main\\.cpp$")
 list(FILTER LIB_SOURCES EXCLUDE REGEX "src/evaluator/modules_builtins/net_module/.*")
 # Exclude swazi_format too
 list(FILTER LIB_SOURCES EXCLUDE REGEX "src/format/.*")
-add_library(swazi_lib ${LIB_SOURCES} "${GENERATED_BUILTIN_CPP}")
+add_library(swazi_lib STATIC ${LIB_SOURCES} "${GENERATED_BUILTIN_CPP}")
 
 target_include_directories(swazi_lib PUBLIC 
     ${CMAKE_SOURCE_DIR}/include
